test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/scalar_initializer_for_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(1)
  ]
  =
  const int(4)
  ;
  return
  identifier(arr)
  [
  const int(0)
  ]
  ;
  }
